--- a/itemservice-db/src/main/resources/application.properties
+++ b/itemservice-db/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.profiles.active=local
+
+#DataSource 설정
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test2
+spring.datasource.username=sa
+spring.datasource.password=
+
+#JdbcTemplate sql log
+logging.level.org.springframework.jdbc=debug
