--- a/itemservice-db/src/test/resources/application.properties
+++ b/itemservice-db/src/test/resources/application.properties
@@ -1,1 +1,8 @@
 spring.profiles.active=test
+
+#Datasource 설정
+spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
+spring.datasource.username=sa
+spring.datasource.password=
+
+logging.level.org.springframework.jdbc=debug
