feat: Add properties for Embedded DB not using Bean-reg

--- a/itemservice-db/src/test/resources/application.properties
+++ b/itemservice-db/src/test/resources/application.properties
@@ -1,8 +1,18 @@
 spring.profiles.active=test
 
 #Datasource 설정
-spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/testcase
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+#DataSource에 대한 설정을 해주지 않으면 SpringBoot는 자동으로 Embedded 모드로 Test를 실행해준다
+# 로그
+# o.s.jdbc.support.JdbcTransactionManager
+# : Acquired Connection [HikariProxyConnection@1789387126 wrapping conn0:
+# url=jdbc:h2:mem:be382850-0371-4ea4-81f5-3708eec1bbe6 user=SA] for JDBC transaction
+# -> 임의의 DB 이름을 부여함 for 여러 곳에서 DataSource를 사용할 경우(기준은 테스트메서드가 아닌 datasource 사용 단위) 동일한 DB 충돌을 방지하기 위함
+
+# *** 동일한 testdb를 유지하기 위한 설정
+spring.datasource.generate-unique-name=false
 
 logging.level.org.springframework.jdbc=debug
