--- a/itemservice-db/src/main/resources/application.properties
+++ b/itemservice-db/src/main/resources/application.properties
@@ -5,5 +5,10 @@ spring.datasource.url=jdbc:h2:tcp://localhost/~/test2
 spring.datasource.username=sa
 spring.datasource.password=
 
+#MyBatis 설정
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservice.repository.mybatis=trace
+
 #JdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
