--- a/itemservice-db/src/test/resources/application.properties
+++ b/itemservice-db/src/test/resources/application.properties
@@ -15,4 +15,9 @@ spring.profiles.active=test
 # *** 동일한 testdb를 유지하기 위한 설정
 spring.datasource.generate-unique-name=false
 
+#MyBatis 설정
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservice.repository.mybatis=trace
+
 logging.level.org.springframework.jdbc=debug
