--- a/itemservice-db/src/main/resources/application.properties
+++ b/itemservice-db/src/main/resources/application.properties
@@ -12,3 +12,11 @@ logging.level.hello.itemservice.repository.mybatis=trace
 
 #JdbcTemplate sql log
 logging.level.org.springframework.jdbc=debug
+
+#JPA log
+
+#실행되는 SQL 확인
+logging.level.org.hibernate.SQL=DEBUG
+
+#SQL에 바인딩되는 Parameter 확인
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
