--- a/itemservice-db/src/test/resources/application.properties
+++ b/itemservice-db/src/test/resources/application.properties
@@ -21,3 +21,11 @@ mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.hello.itemservice.repository.mybatis=trace
 
 logging.level.org.springframework.jdbc=debug
+
+#JPA log
+
+#실행되는 SQL 확인
+logging.level.org.hibernate.SQL=DEBUG
+
+#SQL에 바인딩되는 Parameter 확인
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
